# sift

./: README.md  pyproject.toml
sift/: cli.py  core.py
