[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-dupfinder"
version = "0.1.0"
description = "Duplicate file finder — scan, report, and deduplicate files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
sift = "sift.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sift*"]
